--- a/src/sass/partials/_intro.scss
+++ b/src/sass/partials/_intro.scss
@@ -19,17 +19,17 @@
     color: $c-white;
     font-size: 20px;
     line-height: 1.3;
-    margin: 82px 0;
+    margin: 82px 0 !important;
     max-width: 480px;
 
     @include mq(tablet) {
-        margin: 128px 0;
+        margin: 128px 0 !important;
         font-size: 26px;
         line-height: 1.2;
     }
 
     @include mq(desktop) {
-        margin: 200px 0;
+        margin: 200px 0 !important;
         font-size: 36px;
         line-height: 1.1;
     }
